--- a/education.html
+++ b/education.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ethan Stuart - Education & Certificates</title>
+    <title>Ethan Stuart - Home</title>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-    <header>
+    <header class="shadow-header">
       <h1>Ethan Stuart</h1>
         <p>Email: ethan.c.stuart@gmail.com</p>
         <p>Phone: (415) 419-7630</p>
@@ -21,6 +21,8 @@
               <li><a href="python.html">Python</a></li>
               <li><a href="excel.html">Excel</a></li>
             </ul>
+          </li>
+        </ul>
       </nav>
     </header>
     <h2>Education</h2>
@@ -31,11 +33,18 @@
 
     <h2>Licenses & Certificates</h2>
     <ul>
-      <li>SQL (Advanced) - HackerRank - Feb, 2023</li>
-      <li>Python (Basic) - HackerRank - Oct, 2022</li>
-      <li>SQL (Basic) - HackerRank - Aug, 2022</li>
-      <li>SQL (Intermediate) - HackerRank - Aug, 2022</li>
-      <li>Foundations: Data, Data, Everywhere - Coursera (Google Data Analytics Course) - Feb, 2022</li>
+      <h3>Technical</h3>
+      <li>SQL (Advanced) - HackerRank | Feb, 2023</li>
+      <li>Python (Basic) - HackerRank | Oct, 2022</li>
+      <li>SQL (Basic) - HackerRank | Aug, 2022</li>
+      <li>SQL (Intermediate) - HackerRank | Aug, 2022</li>
+      <h3>Project Management</h3>
+      <li>Project Planning: Putting It All Together - Coursera - Google Project Management | Sep, 2022</li>
+      <li>Project Initiation: Starting a Successful Project	- Coursera - Google Project Management | Sep, 2022</li>
+      <li>Foundations of Project Management	- Coursera - Google Project Management | Sep, 2023</li>
+      <li>Project Execution: Running the Project - Coursera - Google Project Management | Oct, 2023</li>
+      <li>Agile Project Management - Coursera - Google Project Management | Oct, 2023</li>
+      <li>Google Project Management | Specialization - Coursera - Google Project Management | Oct, 2023</li>
     </ul>
   </body>
 </html>
