--- a/experience.html
+++ b/experience.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ethan Stuart - Experience</title>
+    <title>Ethan Stuart - Home</title>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-    <header>
+    <header class="shadow-header">
       <h1>Ethan Stuart</h1>
-      <p>Email: ethan.c.stuart@gmail.com</p>
-      <p>Phone: (415) 419-7630</p>
+        <p>Email: ethan.c.stuart@gmail.com</p>
+        <p>Phone: (415) 419-7630</p>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -28,9 +28,9 @@
     <div class="experience-container">
     <section>
       <h2>Experience</h2>
-      <h3>Capital Group</h3>
+      <h4>Capital Group</h4>
       <p><strong>Hyrbid</strong> - Los Angeles, CA</p>
-      <p><strong>Senior Product Data Analyst</strong> - August, 2022 - PRESENT</p>
+      <p><strong>Senior Product Data Analyst</strong> - August, 2022 - June, 2023</p>
       <ul class="experience-bullets">
         <li>Work in the Investment Operations - Data Team, supporting all internal clients: Sales, Marketing, Investments, Results Analysis</li>
         <li>Expertise in fulfilling the role of a Data Steward, responsible for managing and safeguarding all data requirements across a diverse range of investment vehicles, including the formation of new investment vehicles, fulfilling ongoing reporting needs, addressing ad-hoc sales and marketing needs, and meeting the needs of third-party stakeholders</li>
@@ -39,7 +39,7 @@
         <li>Proven ability to work effectively within cross-functional teams to develop and implement new investment vehicles, such as funds and ETFs, while also ensuring the seamless flow of data across systems and fulfilling internal and external reporting needs, as well as supporting user acceptance testing</li>
         <li>Proficient in SQL and data analysis, with a strong ability to perform complex queries for ad-hoc and ongoing data insights and link to Tableau and PowerBI dashboards for visual representation</li>
       </ul>
-      <h3>Sprout Mortgage</h3>
+      <h4>Sprout Mortgage</h4>
       <p><strong>Remote, USA</strong></p>
       <p><strong>Senior/ Lead Business Intelligence Analyst</strong> - December 2021 - July 2022</p>
       <ul class="experience-bullets">
@@ -49,20 +49,20 @@
         <li>Conducted detailed data analysis across all business units in order to improve efficiencies</li>
         <li>Develop and present materials and reports that analyze key issues and provide fact-based recommendations to senior leaders across several business units (i.e. sales leadership, capital markets, marketing)</li>
       </ul>
-      <h3>Pacific Urban Residential</h3>
+      <h4>Pacific Urban Residential</h4>
       <p><strong>Hybrid</strong> - Los Angeles, USA</p>
       <p><strong>Investment Analyst</strong> - November 2018 - October 2021</p>
       <ul class="experience-bullets">
         <li>Demonstrated ability to collaborate effectively with high-level executives, specifically through direct work experience with the Vice President of Investments for Los Angeles, sourcing multifamily investment opportunities in Southern California</li>
         <li>Proven track record of success in sourcing and conducting due diligence for multifamily real estate investments, with a total of over $500M across multiple investment strategies, representing a significant contribution of 20% to the firm's total investments and 5% to the overall portfolio by 2021, with a portfolio value of over $6.5B+</li>
         <li>Demonstrated ability to compose clear and concise written summaries and investment committee presentations, effectively communicating the potential benefits and risks of potential investments to senior management, including the President and Board of Partners, for thorough review and consideration</li>
-        <li>Prepared detailed investment analyses for all possible investments, saw all investments through every stage of the process: sourcing (on and off market, investment analysis, offer, DD, and closure. Following close of escrow worked with internal asset management and onsite property staff to see investment plan through</li>
+        <li>Prepared detailed investment analyses for all possible investments, saw all investments through every stage of the process: sourcing on and off market, investment analysis, offer, DD, and closure. Following close of escrow worked with internal asset management and onsite property staff to see investment plan through</li>
       </ul>
-      <h3>Civic Financial Services</h3>
+      <h4>Civic Financial Services</h4>
       <p><strong>On-Site</strong> - Redondo Beach, USA</p>
       <p><strong>Senior Analyst</strong> - January 2016 - November 2018</p>
       <ul class="experience-bullets">
-        <li>Developed daily summary reports providing analytics in order to collaborate strategically with senior management to promote the company’s growth, success and overall business development</li>
+        <li>Developed daily summary reports providing analytics in order to collaborate strategically with senior management to promote the company's growth, success and overall business development</li>
         <li>Drove high quality data analysis and strategic business recommendations, conducting market research, and providing key strategic insights</li>
         <li>Demonstrated initiative and leadership in driving and successfully completing various projects, such as the implementation of Tableau, a cloud-based reporting system, the implementation of Salesforce, SQL Server database, and the creation of an automated commission calculation process utilizing advanced Excel modeling techniques</li>
         <li>Developed and implemented an innovative forecasting model and cash flow forecast, resulting in a 20% increase in accuracy and a significant reduction in error rate to less than 0.5%. This led to the optimal utilization of resources and an increase in cash reserves</li>
