--- a/hobbies.html
+++ b/hobbies.html
@@ -45,8 +45,8 @@
         <footer>
   <p style="text-align:left; padding-left: 3%;">Website built and designed by Ethan Stuart</p>
   <div style="text-align:center;">
-    <a href="https://github.com/ethancstuart">GitHub</a>
-    <a href="https://twitter.com/ethan1life">Twitter</a>
-    <a href="#">Instagram</a>
+    <a href="https://github.com/ethancstuart" target="_blank">GitHub</a>
+    <a href="https://twitter.com/ethan1life" target="_blank">Twitter</a>
+    <a href="#" target="_blank">Instagram</a>
   </div>
   </footer>
