--- a/skills.html
+++ b/skills.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>Ethan Stuart - Experience</title>
+  <head>
+    <title>Ethan Stuart - Home</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-</head>
-
-<body>
-    <header>
-        <h1>Ethan Stuart</h1>
-        <nav>
+  </head>
+  <body>
+    <header class="shadow-header">
+      <h1>Ethan Stuart</h1>
+        <p>Email: ethan.c.stuart@gmail.com</p>
+        <p>Phone: (415) 419-7630</p>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="education.html">Education & Certificates</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="work_examples.html">Work Examples</a>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="education.html">Education & Certificates</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="work_examples.html">Work Examples</a>
-                    <ul>
-                        <li><a href="sql.html">SQL</a></li>
-                        <li><a href="python.html">Python</a></li>
-                        <li><a href="excel.html">Excel</a></li>
-                    </ul>
-                </li>
+              <li><a href="sql.html">SQL</a></li>
+              <li><a href="python.html">Python</a></li>
+              <li><a href="excel.html">Excel</a></li>
             </ul>
-        </nav>
+          </li>
+        </ul>
+      </nav>
     </header>
-
     <section>
         <div class="skills-container">
             <!-- Technical Skills -->
